systest delete test data before creating it.
